TinyWall Changelog
---------------------

2.0.0 - Major release (xx.xx.xxxx.)
- Connections window shows blocked applications
- Domain blocklist support
- Hosts file protection
- Firewall rule update without breaking existing connections
- New XML-based updater system
- Lightning-fast search for recognized applications
- Increased service startup performance
- Better support for Windos Networking, Remote Desktop and Remote Assistance
- Fix: Uninstaller now removes user-specific configuration files too
- Fix: Custom ports are not applied to services

---------------------

1.0.3 - Maintenance (21.01.2012.)
- Fix: Controller crash when bubble-editing new exception in GUI multiple times in a row
- Fix: Controller crash after exception modification in Manage window, when Modify is clicked again
- Fix: Possible controller crash when populating list in Connections form
- Fix: Firewall rules may overwrite each other
- Fix: Some DNS responses are blocked, leading to possibly slower DNS resolution
- Fix: Wrong filtering of ICMPv6 traffic
- Fix: GUI is not updated when timed rules are removed
- Fix: Generalize Steam profile for all Steam games
- Tell user that admin rights are missing instead of disabling Uninstall button
- New and updated application profiles
- Updated FAQ (please read it)

---------------------

1.0.2 - Maintenance (27.12.2011.)
- Fix: False merge of firewalls rule upon new exception, leading to loss of connectivity
- Fix: Adding a new rule might not show up in the Manage window, even though it is applied correctly

---------------------

1.0.1 - Maintenance (26.12.2011.)
- Improved startup performance
- Fix: Active tab should only be restored upon load in Manage window
- Fix: Timed exceptions get removed too early
- Fix: Cancelling a process- or service-selection window may cause crash
- Add context menu to terminate a process in the Connections window
- When adding a new exception, always tell the user if the app was recognized in the bubble notification